--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
     "puppeteer": "^24.34.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "telegraf": "^4.16.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
